[build] Configure launcher properties on M1 Mac. Fixes #39